apps/demo-service/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app.kubernetes.io/name: demo-service
  ports:
    - name: http
      port: 80
      targetPort: http
